@@ -1,3 +1,9 @@
+2008-04-21  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-about-me.c: (about_me_commit), (about_me_focus_out),
+	(about_me_set_address_field), (about_me_setup_dialog): fix a leak
+	and some random cleanup
+
 2008-04-13  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-about-me-password.c: (passdlg_error_dialog),
